# forwarding-service

./: .envrc  .gitignore  README.md  README.org  docker-compose.yml  dockerfile  forwarding_service.service  item.py  job.py  main.py  pyproject.toml  test_hvac.py  upload_batch.sh
app/: __init__.py  auth.py  auth_uploader.py  base.py  cli.py  command.py  config.py  dev.py  enum_types.py  file.py  flask_uploader.py  forwarder.py  item_uploader.py  models.py  s3.py  schemas.py  transfer_agent.py  uploader.py  utils.py  worker.py
doc/: iam_credentials.md
forwarding_service/: __init__.py  auth.py  batch_reader_writer.py  command.py  commands.py  enum_types.py  exceptions.py  item.py  job.py  job_manager.py  models.py  query.py  reader_writer.py  s3.py  test.py  transfer_agent.py  utils.py
forwarding_service/cli/: item.py  job.py  main.py
fsapp/: __init__.py  cli.py  command.py  config.py  dirtree.py  enum_types.py  fileshare.py  models.py  schemas.py  sender.py  utils.py  watcher.py  worker.py
fsapp/api/v1/: __init__.py
src/: auth.py  enum_types.py  file.py  item.py  job_manager.py  main.py
templates/: dirtree.html
tests/: __init__.py  conftest.py  test_auth.py  test_init_job.py  test_integrity.py  test_job.py  test_mp.py  test_query.py  test_refresh_credentials.py  test_regexp.py  test_remote.py  test_resume_job.py  test_s3_auth.py  test_src.py  test_user_bucket_permissions.py  test_user_manager.py  test_vault.py
