[tool.poetry]
name = "forwarding-service"
version = "0.1.0"
description = "Resilient and flexible data tranfer tool."
authors = ["Laurent Lejeune <me@lejeunel.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
boto3 = "^1.26.73"
click = "^8.1.3"
SQLAlchemy = "^2.0.3"
hvac = "^1.0.2"
marshmallow = "^3.19.0"
flask-sqlalchemy = "^3.0.3"
sqlalchemy-utils = "^0.40.0"
marshmallow-sqlalchemy = "^0.29.0"
flask-marshmallow = "^0.15"
rich = "^13.3.2"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
isort = "^5.2.2"
mypy = "^0.782"
pytest-flask = "^1.2.0"
python-lsp-server = {extras = ["all"], version = "^1.7.4"}
mock-file-tree = "^1.1.3"
aws-error-utils = "^2.7.0"
pytest = "^7.2.2"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
