[tool.poetry]
name = "forwarding-service"
version = "0.2.0"
description = "Resilient and flexible data tranfer tool."
authors = ["Laurent Lejeune <me@lejeunel.org>"]
readme = "README.org"

[tool.poetry.scripts]
forwarding_service = "forwarding_service.cli.main:main"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.73"
rich = "^13.3.2"
python-decouple = "^3.8"
aws-error-utils = "^2.7.0"
typer = "^0.9.0"
sqlmodel = "^0.0.8"
hvac = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[tool.pyright]
venv = "forwarding-service"
exclude = ["**/__pycache__"]

[tool.black]
line-length = 80
